--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express": "^4.17.1",
     "helmet": "^3.22.0",
     "helmut": "^1.0.1",
-    "morgan": "^1.10.0"
+    "knex": "^0.21.1",
+    "morgan": "^1.10.0",
+    "pg": "^8.2.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
