--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --require test/setup.js",
-    "dev": "nodemon src/server.js",
-    "start": "node src/server.js",
+    "start": "node src/shopping-list.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
   },
